# pixl

./: Cargo.toml  MIGRATION.md  README.md
.github/: FUNDING.yml
.github/workflows/: pixl.yml
src/: circle.rs  color.rs  component.rs  lib.rs  line.rs  node.rs  pixel.rs  rectangle.rs  texture.rs  window.rs
