[package]
name = "pixl"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "The lightweight, powerful Rust game engine and rasterizer built from scratch"
repository = "https://github.com/dylanopen/pixl"
documentation = "https://docs.rs/pixl"
categories = ["game-engines", "graphics", "gui", "mathematics", "rendering"]
keywords = ["game", "pixel", "framebuffer", "rasterization", "rasterizer"]

[dependencies]
anyhow = "1.0.100"
minifb = { version = "0.28.0", default-features = false, features = ["x11"] }

